# timr

./: Cargo.toml  README.md  backup.db
src/: lib.rs  local.db  main.rs
src/backend/: backend.rs  handelers.rs  websocket.rs
src/cli/: cli.rs
src/config/: config.rs
src/db/: connector.rs  local.db.old
src/db/controllers/: task.rs
src/db/models/: task.rs
src/task/: task.rs  task_instance.rs
static/: clock.css  index.html  main.css  tasks.css  tasks.html  test.html
static/scripts/: statusManager.js
static/scripts/index/: clock.js  main.js  taskManager.js
static/scripts/tasks/: main.js
