[package]
name = "timr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.5"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
color-print = "0.3.5"
colored = "2.1.0"
crossterm = "0.27.0"
dotenv = "0.15.0"
piechart = "1.0.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
speedate = "0.13.0"
tokio = { version = "1.35.0", features = ["full"] }


